@@ -1,3 +1,4 @@
-EBUILD qutim-kdeintegration-0.2.9999.ebuild 1443 RMD160 1b15e73154dcf83c9a5b7ba27280aafffcdde3b0 SHA1 f0ca4b60c3b498c81d4bf961cd19ab9e41c58bb9 SHA256 d0d3e7045f51c244ee8532f540d7e8a202fa7107541790b4909e93a2d240f08e
-MISC ChangeLog 291 RMD160 9b979a04139d08febd088ae7939e073ba0a4f207 SHA1 befb809f86877bd270237ff4ec230acf74848761 SHA256 a22449e8b4a9cde8e715081904697f97a9186dd57de00e548cd970e98c602661
+EBUILD qutim-kdeintegration-0.2.9999.ebuild 1472 RMD160 6d9ecdb779bdf187388d975f07adfb7a62351946 SHA1 bd9397b900e009e97bc028837849de67e144d9b7 SHA256 27c5a5a1e71d74a585732e7afde020715fe7da757624b1a1e3c1d653352ba64f
+EBUILD qutim-kdeintegration-0.3.9999.ebuild 1514 RMD160 5f456a530a43c381f80d02a2277d184001979265 SHA1 c84b3e85b24555be3e6e2bdddfffbdd1aa1e0f31 SHA256 f2f31027296826f560354ff41138334088bd036eb8f79bf8760655661cf4dcf8
+MISC ChangeLog 487 RMD160 0ae4e91a08cd2350dec56bf51109cfc6d61ad64c SHA1 820cd45e373340cf9c1927aaa351832f0c0b4f9a SHA256 a31a0362b64578eae9fb658e2f4f7e414f84df0df0098235f86d3fc27582a336
 MISC metadata.xml 356 RMD160 cd96d9c9958b819f12572f9d7254daa87a34a291 SHA1 2fe886dae8f60abdec18572720e64aab7ffa68c3 SHA256 7e0d554ea6e9701c6548d016f4c1bad2267f43e50b241c2b58955964a3782358
